fix: too much text shadow, no img shadow

--- a/Components/App/App.module.css
+++ b/Components/App/App.module.css
@@ -136,6 +136,8 @@
   left: 50%;
   transform: translateX(-50%);
   border-radius: 10px;
+  -webkit-filter: drop-shadow(0px 6px 2px #000000);
+  filter: drop-shadow(0px 6px 2px #000000);
 }
 
 @media screen and (max-width: 700px) {
